--- a/geoproject/docker-compose.yaml
+++ b/geoproject/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
         environment:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: postgres
-            POSTGRES_DB: catagis
+            POSTGRES_DB: gis
             
     django_app:
         build: .
